[gd_scene load_steps=32 format=4 uid="uid://bjots6uvko161"]

[ext_resource type="Texture2D" uid="uid://dhoo46oan0v00" path="res://Pesca (velho)/Assets/sea set.png" id="1_e2o6t"]
[ext_resource type="FontFile" uid="uid://dfprxlv8ocone" path="res://Pesca (velho)/Assets/Minecraft.ttf" id="1_eow3j"]
[ext_resource type="Texture2D" uid="uid://celr2eujxduqr" path="res://Pesca (velho)/Assets/barco 2.png" id="2_e2o6t"]
[ext_resource type="Texture2D" uid="uid://d4ix0bfgwebti" path="res://Pesca (velho)/Assets/moeda.png" id="2_j5wjh"]
[ext_resource type="Script" uid="uid://c7vxrdbbdf446" path="res://Pesca (velho)/linha.gd" id="2_ryrav"]
[ext_resource type="PackedScene" uid="uid://cjmh0trr0ev3c" path="res://Pesca (velho)/anzol.tscn" id="4_fc0e3"]
[ext_resource type="Script" uid="uid://sfyjmxxrfnhc" path="res://Pesca (velho)/fish_spawner.gd" id="5_7jktm"]

[sub_resource type="Animation" id="Animation_j5wjh"]
length = 0.001

[sub_resource type="Animation" id="Animation_eow3j"]
resource_name = "shake"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Barco:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(-38, -0.25, 0, 0.25, 0, -15, -0.25, 0, 0.25, 0, -10, -0.25, 0, 0.25, 0, -38, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.733333, 1.26667, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Barco:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(-98, -0.25, 0, 0.25, 0, -92, -0.25, 0, 0.25, 0, -99, -0.25, 0, 0.25, 0, -98, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.733333, 1.26667, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vef74"]
_data = {
&"RESET": SubResource("Animation_j5wjh"),
&"shake": SubResource("Animation_eow3j")
}

[sub_resource type="TileMapPattern" id="TileMapPattern_fc0e3"]
tile_data = PackedInt32Array(0, 2, 0)

[sub_resource type="TileMapPattern" id="TileMapPattern_7jktm"]
tile_data = PackedInt32Array(0, 1, 0)

[sub_resource type="TileMapPattern" id="TileMapPattern_ryrav"]
tile_data = PackedInt32Array(0, 65537, 0)

[sub_resource type="TileMapPattern" id="TileMapPattern_eow3j"]
tile_data = PackedInt32Array(0, 131073, 0)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j5wjh"]
texture = ExtResource("1_e2o6t")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
1:1/0 = 0
2:1/0 = 0

[sub_resource type="TileSet" id="TileSet_vef74"]
sources/1 = SubResource("TileSetAtlasSource_j5wjh")
pattern_0 = SubResource("TileMapPattern_fc0e3")
pattern_1 = SubResource("TileMapPattern_7jktm")
pattern_2 = SubResource("TileMapPattern_ryrav")
pattern_3 = SubResource("TileMapPattern_eow3j")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jktm"]
size = Vector2(13, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_vef74"]
atlas = ExtResource("2_j5wjh")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hve3p"]
atlas = ExtResource("2_j5wjh")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfdv2"]
atlas = ExtResource("2_j5wjh")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iotsf"]
atlas = ExtResource("2_j5wjh")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc2xo"]
atlas = ExtResource("2_j5wjh")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_215e1"]
atlas = ExtResource("2_j5wjh")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sc4i"]
atlas = ExtResource("2_j5wjh")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_80cx4"]
atlas = ExtResource("2_j5wjh")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8heu"]
atlas = ExtResource("2_j5wjh")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvswv"]
atlas = ExtResource("2_j5wjh")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_boyg6"]
atlas = ExtResource("2_j5wjh")
region = Rect2(176, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e36ub"]
atlas = ExtResource("2_j5wjh")
region = Rect2(192, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb5m1"]
atlas = ExtResource("2_j5wjh")
region = Rect2(208, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_x5p1p"]
animations = [{
"frames": [{
"duration": 4.0,
"texture": SubResource("AtlasTexture_vef74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hve3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfdv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iotsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc2xo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_215e1")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_7sc4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80cx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8heu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvswv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boyg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e36ub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb5m1")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Game" type="Node2D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vef74")
}
autoplay = "shake"

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -8)

[node name="Fish Spawner" type="Node2D" parent="."]
script = ExtResource("5_7jktm")

[node name="Timer" type="Timer" parent="Fish Spawner"]
autostart = true

[node name="Spawner Esquerda" type="Marker2D" parent="Fish Spawner"]
position = Vector2(-90, -24)

[node name="Spawner Esquerda2" type="Marker2D" parent="Fish Spawner"]
position = Vector2(-90, 0)

[node name="Spawner Esquerda3" type="Marker2D" parent="Fish Spawner"]
position = Vector2(-90, 24)

[node name="Spawner Esquerda4" type="Marker2D" parent="Fish Spawner"]
position = Vector2(-90, 48)

[node name="Spawner Esquerda5" type="Marker2D" parent="Fish Spawner"]
position = Vector2(-90, 72)

[node name="Spawner Esquerda6" type="Marker2D" parent="Fish Spawner"]
position = Vector2(-90, 96)

[node name="Spawner Direita" type="Marker2D" parent="Fish Spawner"]
position = Vector2(90, -24)

[node name="Spawner Direita2" type="Marker2D" parent="Fish Spawner"]
position = Vector2(90, 0)

[node name="Spawner Direita3" type="Marker2D" parent="Fish Spawner"]
position = Vector2(90, 24)

[node name="Spawner Direita4" type="Marker2D" parent="Fish Spawner"]
position = Vector2(90, 48)

[node name="Spawner Direita5" type="Marker2D" parent="Fish Spawner"]
position = Vector2(90, 72)

[node name="Spawner Direita6" type="Marker2D" parent="Fish Spawner"]
position = Vector2(90, 96)

[node name="TileMap" type="Node2D" parent="."]

[node name="c√©u" type="TileMapLayer" parent="TileMap"]
z_index = -2
tile_map_data = PackedByteArray("AAD8//j/AQAAAAAAAAD8//n/AQAAAAAAAAD8//r/AQAAAAAAAAD9//j/AQAAAAAAAAD9//n/AQAAAAAAAAD9//r/AQAAAAAAAAD+//j/AQAAAAAAAAD+//n/AQAAAAAAAAD+//r/AQAAAAAAAAD///j/AQAAAAAAAAD///n/AQAAAAAAAAD///r/AQAAAAAAAAAAAPj/AQAAAAAAAAAAAPn/AQAAAAAAAAAAAPr/AQAAAAAAAAABAPj/AQAAAAAAAAABAPn/AQAAAAAAAAABAPr/AQAAAAAAAAACAPj/AQAAAAAAAAACAPn/AQAAAAAAAAACAPr/AQAAAAAAAAADAPj/AQAAAAAAAAADAPn/AQAAAAAAAAADAPr/AQAAAAAAAAD7//j/AQAAAAAAAAD7//n/AQAAAAAAAAD7//r/AQAAAAAAAAAEAPj/AQAAAAAAAAAEAPn/AQAAAAAAAAAEAPr/AQAAAAAAAAA=")
tile_set = SubResource("TileSet_vef74")

[node name="ondas" type="TileMapLayer" parent="TileMap"]
z_index = -1
tile_map_data = PackedByteArray("AAD7//n/AQABAAAAAAD7//r/AQABAAEAAAD8//n/AQABAAAAAAD8//r/AQABAAEAAAD9//n/AQABAAAAAAD9//r/AQABAAEAAAD+//n/AQABAAAAAAD+//r/AQABAAEAAAD///n/AQABAAAAAAD///r/AQABAAEAAAAAAPn/AQABAAAAAAAAAPr/AQABAAEAAAABAPn/AQABAAAAAAABAPr/AQABAAEAAAACAPn/AQABAAAAAAACAPr/AQABAAEAAAADAPn/AQABAAAAAAADAPr/AQABAAEAAAAEAPn/AQABAAAAAAAEAPr/AQABAAEAAAA=")
tile_set = SubResource("TileSet_vef74")

[node name="fundo" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAD7//r/AQACAAAAAAD7//v/AQACAAEAAAD8//r/AQACAAAAAAD8//v/AQACAAEAAAD9//r/AQACAAAAAAD9//v/AQACAAEAAAD+//r/AQACAAAAAAD+//v/AQACAAEAAAD///r/AQACAAAAAAD///v/AQACAAEAAAAAAPr/AQACAAAAAAAAAPv/AQACAAEAAAABAPr/AQACAAAAAAABAPv/AQACAAEAAAACAPr/AQACAAAAAAACAPv/AQACAAEAAAADAPr/AQACAAAAAAADAPv/AQACAAEAAAAEAPr/AQACAAAAAAAEAPv/AQACAAEAAAD7//z/AQACAAEAAAD8//z/AQACAAEAAAD9//z/AQACAAEAAAD+//z/AQACAAEAAAD///z/AQACAAEAAAAAAPz/AQACAAEAAAABAPz/AQACAAEAAAABAP3/AQACAAEAAAACAP3/AQACAAEAAAADAP3/AQACAAEAAAAEAP3/AQACAAEAAAAEAPz/AQACAAEAAAADAPz/AQACAAEAAAACAPz/AQACAAEAAAD7//3/AQACAAEAAAD7//7/AQACAAEAAAD7////AQACAAEAAAD7/wAAAQACAAEAAAD7/wEAAQACAAEAAAD7/wIAAQACAAEAAAD7/wMAAQACAAEAAAD7/wQAAQACAAEAAAD7/wUAAQACAAEAAAD7/wYAAQACAAEAAAD8//3/AQACAAEAAAD8//7/AQACAAEAAAD8////AQACAAEAAAD8/wAAAQACAAEAAAD8/wEAAQACAAEAAAD8/wIAAQACAAEAAAD8/wMAAQACAAEAAAD8/wQAAQACAAEAAAD8/wUAAQACAAEAAAD8/wYAAQACAAEAAAD9//3/AQACAAEAAAD9//7/AQACAAEAAAD9////AQACAAEAAAD9/wAAAQACAAEAAAD9/wEAAQACAAEAAAD9/wIAAQACAAEAAAD9/wMAAQACAAEAAAD9/wQAAQACAAEAAAD9/wUAAQACAAEAAAD9/wYAAQACAAEAAAD+//3/AQACAAEAAAD+//7/AQACAAEAAAD+////AQACAAEAAAD+/wAAAQACAAEAAAD+/wEAAQACAAEAAAD+/wIAAQACAAEAAAD+/wMAAQACAAEAAAD+/wQAAQACAAEAAAD+/wUAAQACAAEAAAD+/wYAAQACAAEAAAD///3/AQACAAEAAAD///7/AQACAAEAAAD/////AQACAAEAAAD//wAAAQACAAEAAAD//wEAAQACAAEAAAD//wIAAQACAAEAAAD//wMAAQACAAEAAAD//wQAAQACAAEAAAD//wUAAQACAAEAAAD//wYAAQACAAEAAAAAAP3/AQACAAEAAAAAAP7/AQACAAEAAAAAAP//AQACAAEAAAAAAAAAAQACAAEAAAAAAAEAAQACAAEAAAAAAAIAAQACAAEAAAAAAAMAAQACAAEAAAAAAAQAAQACAAEAAAAAAAUAAQACAAEAAAAAAAYAAQACAAEAAAABAP7/AQACAAEAAAABAP//AQACAAEAAAABAAAAAQACAAEAAAABAAEAAQACAAEAAAABAAIAAQACAAEAAAABAAMAAQACAAEAAAABAAQAAQACAAEAAAABAAUAAQACAAEAAAABAAYAAQACAAEAAAACAP7/AQACAAEAAAACAP//AQACAAEAAAACAAAAAQACAAEAAAACAAEAAQACAAEAAAACAAIAAQACAAEAAAACAAMAAQACAAEAAAACAAQAAQACAAEAAAACAAUAAQACAAEAAAACAAYAAQACAAEAAAADAP7/AQACAAEAAAADAP//AQACAAEAAAADAAAAAQACAAEAAAADAAEAAQACAAEAAAADAAIAAQACAAEAAAADAAMAAQACAAEAAAADAAQAAQACAAEAAAADAAUAAQACAAEAAAADAAYAAQACAAEAAAAEAP7/AQACAAEAAAAEAP//AQACAAEAAAAEAAAAAQACAAEAAAAEAAEAAQACAAEAAAAEAAIAAQACAAEAAAAEAAMAAQACAAEAAAAEAAQAAQACAAEAAAAEAAUAAQACAAEAAAAEAAYAAQACAAEAAAA=")
tile_set = SubResource("TileSet_vef74")

[node name="Linha" type="Line2D" parent="."]
width = 1.0
default_color = Color(0.830335, 0.830335, 0.830335, 1)
joint_mode = 1
begin_cap_mode = 1
end_cap_mode = 1
script = ExtResource("2_ryrav")

[node name="Barco" type="CharacterBody2D" parent="."]
z_index = -1
position = Vector2(-38, -98)

[node name="Barco" type="Sprite2D" parent="Barco"]
texture = ExtResource("2_e2o6t")
offset = Vector2(-38, 0)

[node name="Mark Barco" type="Marker2D" parent="Barco"]
position = Vector2(38.5, -20.5)

[node name="Anzol" parent="." instance=ExtResource("4_fc0e3")]
position = Vector2(0, -104)

[node name="Mark Anzol" type="Marker2D" parent="Anzol"]
position = Vector2(0.5, -13.5)

[node name="Hitbox" type="CollisionShape2D" parent="Anzol"]
position = Vector2(0.5, 2.5)
shape = SubResource("RectangleShape2D_7jktm")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -67.5
offset_top = -128.0
offset_right = -67.5
offset_bottom = -128.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Control"]
z_index = 5
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 79.5
offset_top = 2.0
offset_right = 119.5
offset_bottom = 18.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_eow3j")
theme_override_font_sizes/font_size = 16
text = "0123"
horizontal_alignment = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Control"]
z_index = 5
position = Vector2(127, 8)
sprite_frames = SubResource("SpriteFrames_x5p1p")
autoplay = "default"
frame_progress = 0.559615

[connection signal="timeout" from="Fish Spawner/Timer" to="Fish Spawner" method="_on_timer_timeout"]
